tests/e2e/semantics/mutation/obj_flatten.error
Error: syntax error in story at line 3, column 1

3|    b = 1
      ^

E0100: Can't assign `int` to `List[List[any]]`
